# playwright-rust

./: Cargo.toml  README.md
.cargo/: mutants.toml
.github/workflows/: release.yml  test.yml
crates/playwright/: CHANGELOG.md  build.rs
crates/playwright-rs-macros/: CHANGELOG.md
crates/playwright-rs-trace/: CHANGELOG.md
crates/playwright-rs-trace/tests/: parse_fixture.rs
crates/playwright/examples/: connect_over_cdp.rs
crates/playwright/src/: assertions.rs  lib.rs
crates/playwright/src/protocol/: drop_options.rs  frame.rs  har_options.rs  locator.rs  mod.rs  route.rs  screenshot.rs
crates/playwright/src/server/: channel_owner.rs  connection.rs  driver.rs
crates/playwright/tests/: playwright_version_test.rs
crates/playwright/tests/integration/: aria_snapshot.rs  locator.rs  route_advanced.rs  screenshot.rs  test_server.rs
crates/site-e2e/tests/: landing_page.rs
crates/site/src/: app.rs  main.rs
crates/site/src/components/: code_block.rs  comparison.rs  dogfood_banner.rs  hero.rs  install.rs  mod.rs
crates/xtask/: Cargo.toml
docs/implementation-plans/: v1.0-gap-analysis.md  v1.0-real-world-validation.md
supply-chain/: audits.toml  config.toml
