[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# xtask is `publish = false`, so the version constraint is purely
# bookkeeping for cargo-deny — the path resolution wins.
playwright-rs = { path = "../playwright", version = "0.13.0" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
